# LibAPR

./: CMakeLists.txt  README.md
examples/: Example_random_access.cpp
gpuhack/: APRDownsampleGPU.hpp  APRIsoConvGPU.hpp  CMakeLists.txt  CPU_full_storage.cpp  CPU_pixel_conv_benchmark.cpp  CPU_pixel_downsample.cpp  Cpu_dense_tree.cpp  Cpu_example.cpp  Cpu_neighbour_access_Tree_stencil.cpp  GPUAPRAccess.hpp  GPU_333_conv.cu  GPU_333_conv_new.cu  GPU_555_conv.cu  GPU_downsample.cu  GPU_dynamic_zx_access.cu  GPU_full_storage.cu  GPU_insert_dense.cu  GPU_insert_dense_conv.cu  GPU_insert_dense_conv_dyn.cu  GPU_nd_zx_access.cu  GPU_raycast.cu  GPU_shared_access.cu  GPU_update_dense_patch.cu
src/data_structures/APR/: APR.hpp  APRAccess.hpp  APRAccessStructures.hpp  APRIterator.hpp  APRIterator_.hpp  APRTreeIterator.hpp  ExtraParticleData.hpp
src/data_structures/Mesh/: PixelData.hpp
src/io/: APRWriter.hpp  hdf5functions_blosc.cpp
src/numerics/: APRCompress.hpp  APRNumerics.hpp  APRRaycaster.hpp
test/: APRTest.cpp
